--- a/client/pages/create-game/create-game.scss
+++ b/client/pages/create-game/create-game.scss
@@ -1,10 +1,16 @@
 @import '../../styles/variables.scss';
+
+$create-game-width: 100% !default;
+$create-game-max-width: 600px !default;
+$create-game-background: rgba($color-styleguide-secondary, .7) !default;
+$create-game-color: #fff !default;
+
 .create-game {
-  width: 100%;
-  max-width: 600px;
+  width: $create-game-width;
+  max-width: $create-game-max-width;
+  color: $create-game-color;
+  background: $create-game-background;
   margin: 0 auto;
-  color: #fff;
-  background: rgba($color-styleguide-secondary, .7);
 
   &__content {
     padding: 0 40px 40px;
@@ -20,7 +26,7 @@
   }
 
   &__error {
-    color: white;
+    color: $create-game-color;
     padding: 10px 0;
   }
 }
