Refactor how bots work and add a test for spawing bots from node in-game

--- a/client/components/button/button.scss
+++ b/client/components/button/button.scss
@@ -52,6 +52,7 @@ $button-primary: (
     cursor: pointer;
     transition: all .2s ease-in-out;
     display: flex;
+    align-items: center;
     flex-wrap: nowrap;
     @include button-variant($button-primary);
   }
